@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.17.10
-DEPENDENCY="zeda=1.10.0;zm=1.9.14"
+VERSION=1.17.11
+DEPENDENCY="zeda=1.10.0;zm=1.9.17"
